--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,18 @@
     min-width: 250px;
 }
 
+.formDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    min-width: 400px;
+    border-radius: 4%;
+    background-color: rgb(233, 232, 232);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.397);
+}
+
 /* Misc */
 .cardSplitter{
     display: flex;
