--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,14 @@
+/* Navbar */
+.navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 3000;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.397);
+
+}
+
 /* Divs */
 .container{
     display: flex;
@@ -6,7 +17,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top: 100px;
     gap: 20px;
 }
 
@@ -27,6 +38,20 @@
 
 .card{
     min-width: 250px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.397);
+
+}
+
+.filterDiv{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4%;
+    padding: 5px;
+    gap: 10px;
+    background-color: rgb(233, 232, 232);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.397);
 }
 
 .formDiv{
@@ -52,4 +77,22 @@
     flex-direction: column;
     padding: 5px;
     gap: 4px;
+}
+
+.nameBtnHeight{
+    height: 32px;
+}
+
+.buttonAlign{
+    margin-bottom: 50px;
+}
+
+.form-select:hover{
+    cursor: pointer;
+}
+
+.filters{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
